# pre-commit-hooks-ros

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  README.md  cliff.toml  package.json  requirements.txt  setup.cfg  setup.py
.github/: sync-files.yaml
.github/workflows/: auto-update.yml  pytest.yaml  semantic-pull-request.yaml  test-pre-commit-hooks.yaml  update-depend-versions.yaml
pre_commit_hooks/: __init__.py  check_gitmodules.py  check_submodules_branch.py  ros_include_guard.py  sort_package_xml.py  sync_repos_files.py
tests/: test_check_gitmodules.py  test_check_submodules_branch.py  test_ros_include_guard.py  test_sort_package_xml.py  test_sync_repos_files.py
tests/pre-commit-hooks/: test-pre-commit-hooks.yaml
tests/pre-commit-hooks/check-gitmodules/: .gitmodules
tests/pre-commit-hooks/prettier-package-xml/normal/: package.xml
tests/pre-commit-hooks/prettier-xacro/: calibration.xacro  sample.xacro
tests/pre-commit-hooks/ros-include-guard/include/foo_bar/: baz.hpp
tests/pre-commit-hooks/sync-repos-files/: core.repos
tests/resources/rospkg1/: package.xml
tests/resources/rospkg2/: CMakeLists.txt
tests/resources/rospkg3/: package.xml
tests/resources/rospkg3/include/rospkg/: .hpp
tests/test_check_gitmodules/: invalid-multiple-mixed.gitmodules  invalid-name-mismatch.gitmodules  invalid-update-not-none.gitmodules  valid-multiple.gitmodules  valid-with-both.gitmodules  valid-with-branch.gitmodules  valid-with-update-none.gitmodules
tests/test_check_submodules_branch/: no-branch.gitmodules
tests/test_ros_include_guard/include/rospkg/: foobar.right.h  foobar.right.hpp  foobar.wrong.hpp  nolint.ok.hpp  nolint.right.hpp  nolint.wrong.hpp  pragma.right.hpp  pragma.wrong.hpp
tests/test_ros_include_guard/src/: foo_bar_baz.right.hpp
tests/test_ros_include_guard/src/foo/: bar_baz.right.hpp
tests/test_ros_include_guard/src/foo/bar/: baz.right.hpp  baz.wrong.hpp
tests/test_ros_include_guard/src/foo_bar/: baz.ok.hpp
tests/test_sort_package_xml/: no-format.answer.xml  no-format.input.xml  normal.answer.xml  normal.input.xml  package.ans.xml  package.ng.xml
tests/test_sync_repos_files/: core-in-sync.repos  core-with-extra.repos  non-src-submodule.gitmodules  update-none.gitmodules  with-branch.gitmodules
