[metadata]
name = pre_commit_hooks_ros
version = 0.1.0
url = https://github.com/pre-commit/pre-commit-hooks
license_file = LICENSE
description = ros-related hooks for pre-commit
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    sort-package-xml = pre_commit_hooks.sort_package_xml:main
    ros-include-guard = pre_commit_hooks.ros_include_guard:main
