[metadata]
name = pre_commit_hooks_ros
version = 0.1.0
url = https://github.com/pre-commit/pre-commit-hooks
license_file = LICENSE
description = ros-related hooks for pre-commit
long_description = file: README.md

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    ros-include-guard = pre_commit_hooks.ros_include_guard:main
    sort-package-xml = pre_commit_hooks.sort_package_xml:main

[flake8]
# Modified from https://github.com/ament/ament_lint/blob/ebd524bb9973d5ec1dc48a670ce54f958a5a0243/ament_flake8/ament_flake8/configuration/ament_flake8.ini
application_import_names = pre_commit_hooks
extend-ignore = B902,C816,D100,D101,D102,D103,D104,D105,D106,D107,D203,D212,D404,I202,CNL100,E203,E501,Q000
import-order-style = google
max-line-length = 100
show-source = true
statistics = true

[isort]
profile=black
line_length=100
force_sort_within_sections=true
force_single_line=true
reverse_relative=true
known_third_party=launch
