<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rospkg</name>
  <version>0.0.0</version>
  <description>The dummy package to test sort_package_xml</description>
  <maintainer email="foo.bar@example.com">Foo Bar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>aaaaa</depend>
  <depend>bbbbb</depend>
  <depend>ccccc</depend>
  <depend>ddddd</depend>
  <depend>eeeee</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
